--- a/policy.html
+++ b/policy.html
@@ -103,7 +103,7 @@
                   this page.
                 </p> <p>This policy is effective as of 2022-01-19</p> <p><strong>Contact Us</strong></p> <p>
                   If you have any questions or suggestions about our
-                  Privacy Policy, do not hesitate to contact me at gorilotron@gmail.com.
+                  Privacy Policy, do not hesitate to contact us at gorilotron@gmail.com.
                 </p>
     </body>
     </html>
