--- a/policy.html
+++ b/policy.html
@@ -74,12 +74,12 @@
                   Personal Information, thus we are striving to use commercially
                   acceptable means of protecting it. But remember that no method
                   of transmission over the internet, or method of electronic
-                  storage is 100% secure and reliable, and I cannot
+                  storage is 100% secure and reliable, and we cannot
                   guarantee its absolute security.
                 </p> <p><strong>Links to Other Sites</strong></p> <p>
                   This Service may contain links to other sites. If you click on
                   a third-party link, you will be directed to that site. Note
-                  that these external sites are not operated by me.
+                  that these external sites are not operated by us.
                   Therefore, we strongly advise you to review the
                   Privacy Policy of these websites. We have
                   no control over and assume no responsibility for the content,
@@ -93,12 +93,12 @@
                     me with personal information, we immediately
                     delete this from our servers. If you are a parent or guardian
                     and you are aware that your child has provided us with
-                    personal information, please contact me so that
+                    personal information, please contact us so that
                     we will be able to do the necessary actions.
                   </p></div> <!----> <p><strong>Changes to This Privacy Policy</strong></p> <p>
                   We may update our Privacy Policy from
                   time to time. Thus, you are advised to review this page
-                  periodically for any changes. I will
+                  periodically for any changes. We will
                   notify you of any changes by posting the new Privacy Policy on
                   this page.
                 </p> <p>This policy is effective as of 2022-01-19</p> <p><strong>Contact Us</strong></p> <p>
