--- a/policy.html
+++ b/policy.html
@@ -7,7 +7,7 @@
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:5em; } </style>
     </head>
     <body>
-    <strong>Privacy Policy</strong> <p>
+    <h1>Privacy Policy</h1> <p>
                   Gorilotron built the Intense Creatures app as
                   a Free app. This SERVICE is provided by
                   Gorilotron at no cost and is intended for use as
@@ -26,7 +26,7 @@
                   The terms used in this Privacy Policy have the same meanings
                   as in our Terms and Conditions, which are accessible at
                   Intense Creatures unless otherwise defined in this Privacy Policy.
-                </p> <p><strong>Information Collection and Use</strong></p> <p>
+                </p> <h2>Information Collection and Use</h2> <p>
                   For a better experience, while using our Service, we
                   may require you to provide us with certain personally
                   identifiable information. The information that
@@ -37,7 +37,8 @@
                   </p> <p>
                     Link to the privacy policy of third-party service providers used
                     by the app
-                  </p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p><strong>Log Data</strong></p> <p>
+                  </p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li>
+                </ul></div> <h2>Log Data</h2> <p>
                   We want to inform you that whenever you
                   use our Service, in a case of an error in the app
                   we collect data and information (through third-party
@@ -47,7 +48,7 @@
                   configuration of the app when utilizing my Service,
                   the time and date of your use of the Service, and other
                   statistics.
-                </p> <p><strong>Cookies</strong></p> <p>
+                </p> <h2>Cookies</h2> <p>
                   Cookies are files with a small amount of data that are
                   commonly used as anonymous unique identifiers. These are sent
                   to your browser from the websites that you visit and are
@@ -60,7 +61,7 @@
                   and know when a cookie is being sent to your device. If you
                   choose to refuse our cookies, you may not be able to use some
                   portions of this Service.
-                </p> <p><strong>Service Providers</strong></p> <p>
+                </p> <h2>Service Providers</h2> <p>
                   We may employ third-party companies and
                   individuals due to the following reasons:
                 </p> <ul><li>To facilitate our Service;</li> <li>To provide the Service on our behalf;</li> <li>To perform Service-related services; or</li> <li>To assist us in analyzing how our Service is used.</li></ul> <p>
@@ -69,14 +70,14 @@
                   Information. The reason is to perform the tasks assigned to
                   them on our behalf. However, they are obligated not to
                   disclose or use the information for any other purpose.
-                </p> <p><strong>Security</strong></p> <p>
+                </p> <h2>Security</h2> <p>
                   We value your trust in providing us your
                   Personal Information, thus we are striving to use commercially
                   acceptable means of protecting it. But remember that no method
                   of transmission over the internet, or method of electronic
                   storage is 100% secure and reliable, and we cannot
                   guarantee its absolute security.
-                </p> <p><strong>Links to Other Sites</strong></p> <p>
+                </p> <h2>Links to Other Sites</h2> <p>
                   This Service may contain links to other sites. If you click on
                   a third-party link, you will be directed to that site. Note
                   that these external sites are not operated by us.
@@ -85,7 +86,7 @@
                   no control over and assume no responsibility for the content,
                   privacy policies, or practices of any third-party sites or
                   services.
-                </p> <p><strong>Children’s Privacy</strong></p> <div><p>
+                </p> <h2>Children’s Privacy</h2> <div><p>
                     These Services do not address anyone under the age of 13.
                     We do not knowingly collect personally
                     identifiable information from children under 13 years of age. In the case
@@ -95,13 +96,13 @@
                     and you are aware that your child has provided us with
                     personal information, please contact us so that
                     we will be able to do the necessary actions.
-                  </p></div> <!----> <p><strong>Changes to This Privacy Policy</strong></p> <p>
+                  </p></div> <!----> <h2>Changes to This Privacy Policy</h2> <p>
                   We may update our Privacy Policy from
                   time to time. Thus, you are advised to review this page
                   periodically for any changes. We will
                   notify you of any changes by posting the new Privacy Policy on
                   this page.
-                </p> <p>This policy is effective as of 2022-01-19</p> <p><strong>Contact Us</strong></p> <p>
+                </p> <p>This policy is effective as of 2022-01-19</p> <h2>Contact Us</h2> <p>
                   If you have any questions or suggestions about our
                   Privacy Policy, do not hesitate to contact us at gorilotron@gmail.com.
                 </p>
